# rodder

./: .codespellrc  .gitignore  PKGBUILD  README.md  TODO.md  ideas.md  librodder.py  push-to-aur.sh  pyproject.toml  rodder  rodder.fish  setup.py
docs/: conf.py  index.rst
docs/html/: genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/html/_sources/: index.rst.txt
pkgbuild/: PKGBUILD
rodder/: rodder.py
