[tool.poetry]
name = "rodder"
version = "0.1.1"
description = "A distro-independant package manager for Linux"
authors = ["Drake <mdrakea3@tutanota.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
