[tool.poetry]
name = "rodder"
version = "0.1.8"
description = "A distro-independant package manager for Linux"
authors = ["Drake <mdrakea3@tutanota.com>"]
license = "Unlicense"
readme='README.md'
repository="https://github.com/Ruthenic/rodder"

[tool.poetry.dependencies]
python = "^3.8"
pygit2 = "^1.5.0"


[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
